<resources>
    <string name="app_name">数独计算器</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clean">C</string>
    <string name="all_clean">清空数据</string>
    <string name="calculate">开始计算</string>
    <string name="start">确定开始吗？</string>
    <string name="too_less_num">数据量过少，可能非唯一解，继续？</string>
    <string name="data_error">数据不合法</string>
    <string name="row_duplicate">该行有重复数字</string>
    <string name="col_duplicate">该列有重复数字</string>
    <string name="box_duplicate">九宫格有重复数字</string>
    <string name="calculate_done">计算完成，耗时%1$s秒</string>
</resources>
